--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 24
     buildToolsVersion "22.0.0"
     defaultConfig {
-        applicationId "world.com.cityexplorer"
+        applicationId "com.world.cityexplorer"
         minSdkVersion 23
         targetSdkVersion 24
         versionCode 1
@@ -16,6 +16,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            debuggable true
+        }
     }
 }
 
@@ -25,6 +28,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.+'
+
     compile 'com.google.android.gms:play-services:7.8.0'
 
     testCompile 'junit:junit:4.12'
